Inserido o textearea para inserir o texto e importado a fonte padrão do projeto

--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Epilogue:wght@600&family=Inter:wght@400;700&display=swap');
+
 * {
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
   background-color: rgba(243, 245, 252, 1);
+  font-family: 'Inter', sans-serif;
 }
 
 main {
@@ -16,4 +19,16 @@ main {
   height: 48px;
   left: 40px;
   top: 40px;
+}
+
+textarea {
+  position: absolute;
+  width: 680px;
+  height: 250px;
+  left: 220px;
+  top: 160px;
+  font-size: 32px;
+  font-weight: 400;
+  color: rgba(10, 56, 113, 1);
+  border: none;
 }
