--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ textarea {
   width: 260px;
   height: 18px;
   left: 240px;
-  top: 450px;
+  top: 480px;
 }
 
 .instructions > p {
@@ -56,7 +56,7 @@ textarea {
   width: 660px;
   height: 67px;
   left: 240px;
-  top: 470px;
+  top: 500px;
   padding: 0px;
 }
 
@@ -83,4 +83,54 @@ textarea {
   line-height: 19px;
   text-align: center;
   color: rgb(10, 56, 113);
+}
+
+.output-container {
+  padding: 32px;
+  position: absolute;
+  width: 350px;
+  height: 580px;
+  top: 40px;
+  left: 944px;
+  background: #ffffff;
+  border-radius: 32px;
+  box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);
+}
+
+.output-container > img {
+  width: 286px;
+  height: 304px;
+  margin-bottom: 32px;
+}
+
+.output-container > div {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 0px;
+  gap: 16px;
+  position: absolute;
+  width: 286px;
+  height: 122px;
+}
+
+.output-container > div > p:first-child {
+  font-family: 'Inter', sans-serif;
+  text-align: center;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 120%;
+  color: rgb(52, 58, 64);
+  align-self: stretch;
+}
+
+.output-container > div > p:last-child {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  text-align: center;
+  align-self: stretch;
+  color: rgb(73, 80, 87);
 }
