--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 
 main {
   max-width: 1440px;
-  max-height: 1024;
+  max-height: 1024px;
 }
 
 .logo-container {
@@ -31,6 +31,7 @@ textarea {
   font-weight: 400;
   color: rgba(10, 56, 113, 1);
   border: none;
+  resize: none;
 }
 
 .instructions {
@@ -92,7 +93,7 @@ textarea {
   height: 580px;
   top: 40px;
   left: 944px;
-  background: #ffffff;
+  background: rgb(255, 255, 255);
   border-radius: 32px;
   box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);
 }
@@ -133,4 +134,26 @@ textarea {
   text-align: center;
   align-self: stretch;
   color: rgb(73, 80, 87);
+}
+
+footer {
+  display: flex;
+  justify-content: space-between;
+  align-content: space-between;
+  position: absolute;
+  bottom: 0px;
+  width: 1366px;
+  background: rgb(10, 56, 113);
+  color: rgb(255, 255, 255);
+  border: 1px solid black;
+}
+
+footer > p {
+  background: rgb(10, 56, 113);
+  padding: 4px;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 90%;
 }
