Realizado algumas refatorações no código html e css e realizado a lógica do botão criptografar

--- a/style.css
+++ b/style.css
@@ -98,13 +98,19 @@ textarea {
   box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);
 }
 
-.output-container > img {
+.output-container > .output-img-container {
   width: 286px;
   height: 304px;
   margin-bottom: 32px;
 }
 
-.output-container > div {
+.output-container > .output-img-container > img {
+  width: 286px;
+  height: 304px;
+  margin-bottom: 32px;
+}
+
+.output-container > .output-instructions {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -115,7 +121,7 @@ textarea {
   height: 122px;
 }
 
-.output-container > div > p:first-child {
+.output-container > .output-instructions > p:first-child {
   font-family: 'Inter', sans-serif;
   text-align: center;
   font-weight: 700;
@@ -125,7 +131,7 @@ textarea {
   align-self: stretch;
 }
 
-.output-container > div > p:last-child {
+.output-container > .output-instructions > p:last-child {
   font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
