--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ main {
   display: flex;
   margin-left: 40px;
   margin-top: 60px;
+  margin-bottom: 14px;
 }
 
 .input-section {
@@ -44,7 +45,6 @@ textarea {
 
 textarea:focus {
   outline: 0;
-
 }
 
 .instructions {
@@ -100,16 +100,19 @@ textarea:focus {
   left: 940px;
   padding: 10px;
   width: 350px;
-  height: 590px;
+  max-height: 590px;
   background: rgb(255, 255, 255);
   border-radius: 32px;
   box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);
+  text-align: center;
 }
 
 .output-default {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 48px;
+  height: 570px;
 }
 
 .output-img-container {
@@ -126,7 +129,6 @@ textarea:focus {
   padding: 0px;
   gap: 16px;
   width: 286px;
-  height: 122px;
   text-align: center;
 }
 
@@ -153,8 +155,9 @@ textarea:focus {
 .output-result {
   display: none;
   flex-direction: column;
+  align-items: stretch;
   width: 100%;
-  height: 100%;
+  height: 570px;
   font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
@@ -162,15 +165,20 @@ textarea:focus {
   line-height: 150%;
   background-color: rgb(255, 255, 255);
   color: rgb(73, 80, 87);
-  overflow: hidden;
   padding: 6px;
-  
-  align-content: space-between;
 }
 
 .output-text-container {
-  margin-bottom: 15px;
-  height: 560px;
+  margin-top: 10px;
+  margin-bottom: 4px;
+  max-height: 600px;
+  height: 600px;
+  max-width: 100%;
+  text-align: center;
+}
+
+.output-text-container > p {
+  width: 100%;
 }
 
 .copy-button-container {
@@ -193,8 +201,9 @@ textarea:focus {
 }
 
 .tooltip-container {
+  position: relative;
   height: 30px;
-  margin-top: 38px;
+  margin-top: 8px;
   margin-bottom: 5px;
   text-align: center;
   display: flex;
@@ -238,7 +247,7 @@ textarea:focus {
 }
 
 footer {
-  position: absolute;
+  position: relative;
   bottom: 0px;
   display: flex;
   justify-content: space-between;
@@ -246,6 +255,8 @@ footer {
   width: 100%;
   background: rgb(10, 56, 113);
   color: rgb(255, 255, 255);
+  margin-bottom: 0%;
+  margin-top: 6px;
 }
   
 footer > p {
@@ -256,4 +267,76 @@ footer > p {
   font-weight: 400;
   font-size: 12px;
   line-height: 90%;
+}
+
+@media screen and (max-width: 768px) and (min-width: 376px) {
+  body {
+    max-width: 768px;
+  }
+
+  main {
+    max-height: 1174px;
+    max-width: 768px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-left: 10px;
+    margin-bottom: 10px;
+    padding: 10px;
+  }
+
+  .input-section {
+    margin: 0px;
+    max-width: 768px;
+    margin-bottom: 5px;
+    padding: 25px;
+  }
+
+  .output-container {
+    z-index: 0;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    position: static;
+    left: 0px;
+    padding: 20px;
+    width: 100%;
+    min-height: 133px;
+    max-height: 343px;
+    margin-top: 0px;
+    margin-bottom: 30px;
+  }
+
+  .output-default {
+    width: 100%;
+    height: 100%;
+    margin-top: 5px;
+  }
+
+  .output-img-container {
+    display: none;
+  }
+
+  .output-instructions {
+    height: 100%;
+    width: 100%;
+    align-items: stretch;
+    justify-content: center;
+  }
+
+  .output-result {
+    height: 100%;
+    max-height: 100%;
+  }
+
+  .output-text-container {
+    height: 180px;
+    max-height: 180px;
+  }
+
+  .tooltip-container {
+    align-self: center;
+    top: 4px;
+  }
+
 }
