--- a/style.css
+++ b/style.css
@@ -280,16 +280,20 @@ footer > p {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-left: 10px;
-    margin-bottom: 10px;
+    margin: 6px;
     padding: 10px;
   }
 
   .input-section {
     margin: 0px;
     max-width: 768px;
+    width: 100%;
     margin-bottom: 5px;
     padding: 25px;
+  }
+
+  .input-section > * {
+    width: 100%;
   }
 
   .output-container {
@@ -339,4 +343,83 @@ footer > p {
     top: 4px;
   }
 
+}
+
+@media screen and (max-width: 375px) {
+  body {
+    max-width: 375px;
+    max-height: 1715px;
+    padding: 5px;
+  }
+
+  header {
+    margin-left: 5px;
+  }
+
+  main {
+    max-width: 100%;
+    max-height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 5px;
+    margin: 5px;
+  }
+
+  .input-section {
+    width: 100%;
+    height: 550px;
+    margin: 10px 0px;
+    display: flex;
+    flex-direction: column;
+  }
+
+  textarea {
+    width: 100%;
+  }
+
+  .button-container {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .output-container {
+    z-index: 0;
+    position: static;
+    left: 0px;
+    padding: 20px;
+    width: 100%;
+    min-height: 133px;
+    max-height: 343px;
+    margin-top: 0px;
+    margin-bottom: 14px;
+  }
+
+  .output-default {
+    width: 100%;
+    height: 100%;
+    margin-top: 5px;
+  }
+
+  .output-img-container {
+    display: none;
+  }
+
+  .output-result {
+    height: 100%;
+    max-height: 100%;
+  }
+
+  .output-text-container {
+    height: 250px;
+    max-height: 180px;
+    overflow: scroll;
+  }
+
+  .tooltip-container {
+    align-self: center;
+    top: 4px;
+  }
 }
