--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 }
 
 body {
+  max-width: 100%;
   background-color: rgba(243, 245, 252, 1);
 }
 
@@ -19,17 +20,19 @@ header {
 }
 
 main {
-  max-width: 1440px;
-  max-height: 498px;
-  padding: 20px;
+  max-width: 100%;
+  max-height: 481px;
+  padding: 8px;
   display: flex;
-  margin-left: 40px;
-  margin-top: 60px;
-  margin-bottom: 14px;
+  justify-content: space-between;
+  align-items: flex-start;
+  margin-top: 40px;
+  margin-left: 60px;
+  margin-bottom: 40px;
 }
 
 .input-section {
-  margin-left: 120px;
+  margin-left: 40px;
 }
 
 textarea {
@@ -94,13 +97,12 @@ textarea:focus {
 }
 
 .output-container {
-  position: absolute;
-  z-index: 1;
-  top: 40px;
-  left: 940px;
+  position: relative;
+  height: 540px;
+  top: -80px;
   padding: 10px;
   width: 350px;
-  max-height: 590px;
+  max-height: 100%;
   background: rgb(255, 255, 255);
   border-radius: 32px;
   box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);
@@ -111,8 +113,8 @@ textarea:focus {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 48px;
-  height: 570px;
+  margin-top: 5px;
+  height: 525px;
 }
 
 .output-img-container {
@@ -157,7 +159,7 @@ textarea:focus {
   flex-direction: column;
   align-items: stretch;
   width: 100%;
-  height: 570px;
+  height: 525px;
   font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
@@ -166,6 +168,7 @@ textarea:focus {
   background-color: rgb(255, 255, 255);
   color: rgb(73, 80, 87);
   padding: 6px;
+  border-radius: 32px;
 }
 
 .output-text-container {
